testcases/miniGMG_full/hasnozero_experiment/hasazero_out.txt
1 MPI Tasks of 52 threads
truncating the v-cycle at 2^3 subdomains
creating domain...       done
  32 x 32 x 32 (per subdomain)
  64 x 64 x 64 (per process)
  64 x 64 x 64 (overall)
  1-deep ghost zones
  allocated 34 MB
initializing alpha, beta, RHS for the ``hard problem''...
  average value of f =  -1.110223024625e-15
done
MGBuild...                      
  level= 0, eigenvalue_max ~= 1.999996e+00
  level= 1, eigenvalue_max ~= 1.999984e+00
  level= 2, eigenvalue_max ~= 1.999935e+00
  level= 3, eigenvalue_max ~= 1.999740e+00
  level= 4, eigenvalue_max ~= 1.998958e+00
done
MGSolve...                      
v-cycle= 1, norm=0.00104306832854682090 (1.043068e-03)
v-cycle= 2, norm=0.00008508167020989158 (8.508167e-05)
v-cycle= 3, norm=0.00001867174276554400 (1.867174e-05)
v-cycle= 4, norm=0.00000204150507727304 (2.041505e-06)
v-cycle= 5, norm=0.00000036859113979502 (3.685911e-07)
v-cycle= 6, norm=0.00000004500378137516 (4.500378e-08)
v-cycle= 7, norm=0.00000000777269404926 (7.772694e-09)
v-cycle= 8, norm=0.00000000096440667838 (9.644067e-10)
v-cycle= 9, norm=0.00000000016687878834 (1.668788e-10)
v-cycle=10, norm=0.00000000002055542257 (2.055542e-11)
v-cycle=11, norm=0.00000000000354951424 (3.549514e-12)
v-cycle=12, norm=0.00000000000043768760 (4.376876e-13)
v-cycle=13, norm=0.00000000000007507772 (7.507772e-14)
v-cycle=14, norm=0.00000000000000922492 (9.224916e-15)
v-cycle=15, norm=0.00000000000000159709 (1.597090e-15)
v-cycle=16, norm=0.00000000000000020680 (2.068041e-16)
done
MGSolve...                      
v-cycle= 1, norm=0.00104306832854682090 (1.043068e-03)
v-cycle= 2, norm=0.00008508167020989158 (8.508167e-05)
v-cycle= 3, norm=0.00001867174276554400 (1.867174e-05)
v-cycle= 4, norm=0.00000204150507727304 (2.041505e-06)
v-cycle= 5, norm=0.00000036859113979502 (3.685911e-07)
v-cycle= 6, norm=0.00000004500378137516 (4.500378e-08)
v-cycle= 7, norm=0.00000000777269404926 (7.772694e-09)
v-cycle= 8, norm=0.00000000096440667838 (9.644067e-10)
v-cycle= 9, norm=0.00000000016687878834 (1.668788e-10)
v-cycle=10, norm=0.00000000002055542257 (2.055542e-11)
v-cycle=11, norm=0.00000000000354951424 (3.549514e-12)
v-cycle=12, norm=0.00000000000043768760 (4.376876e-13)
v-cycle=13, norm=0.00000000000007507772 (7.507772e-14)
v-cycle=14, norm=0.00000000000000922492 (9.224916e-15)
v-cycle=15, norm=0.00000000000000159709 (1.597090e-15)
v-cycle=16, norm=0.00000000000000020680 (2.068041e-16)
done
                                  0            1            2            3            4 
                               32^3         16^3          8^3          4^3          2^3        total
smooth                     0.055308     0.007919     0.001477     0.000563     0.000000     0.065268
residual                   0.011854     0.000923     0.000169     0.000064     0.000061     0.013071
restriction                0.000626     0.000128     0.000066     0.000047     0.000000     0.000867
interpolation              0.000842     0.000150     0.000068     0.000046     0.000000     0.001107
applyOp                    0.000000     0.000000     0.000000     0.000000     0.000228     0.000228
BLAS1                      0.002374     0.000134     0.000069     0.000045     0.002044     0.004667
BLAS3                      0.000000     0.000000     0.000000     0.000000     0.000000     0.000000
communication              0.023792     0.006098     0.001567     0.000646     0.000369     0.032471
  local exchange           0.023776     0.006084     0.001554     0.000632     0.000362     0.032407
--------------         ------------ ------------ ------------ ------------ ------------ ------------ 
Total by level             0.094810     0.015309     0.003410     0.001425     0.002728     0.117682

  Total time in MGBuild       0.001528
  Total time in MGSolve       0.117847
              " v-cycles      0.117737
      number of v-cycles            16
Bottom solver iterations            41


Error test: h = 1.562500e-02, max = 3.529713e-04
Error test: h = 1.562500e-02, L2  = 5.559940e-05
deallocating domain...   done
